[gd_scene load_steps=12 format=3 uid="uid://b3b4m4uodlg1d"]

[ext_resource type="Script" uid="uid://cecp7of361k2n" path="res://scripts2/WinningScreen.gd" id="1_rjmuv"]
[ext_resource type="FontFile" uid="uid://c4pe7v7qaoxgf" path="res://assets/fonts/Comfortaa-Bold.ttf" id="1_x2pdc"]
[ext_resource type="Texture2D" uid="uid://bnc0rnex61qm0" path="res://assets/background/background_win.png" id="2_wmuaa"]
[ext_resource type="Texture2D" uid="uid://q3gwrdlm0bad" path="res://assets/characters/happy_fox.png" id="3_qcamx"]
[ext_resource type="PackedScene" uid="uid://ne1mtcf1gjyd" path="res://scenes/scene_transition_animation.tscn" id="4_qcamx"]

[sub_resource type="Animation" id="Animation_qcamx"]
resource_name = "FoxJump"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HappyFox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1614, 966), Vector2(1614, 930), Vector2(1614, 966), Vector2(1614, 930), Vector2(1614, 966), Vector2(1614, 930), Vector2(1614, 966)]
}

[sub_resource type="Animation" id="Animation_0s3hi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HappyFox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1614, 966)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xe6a3"]
_data = {
&"FoxJump": SubResource("Animation_qcamx"),
&"RESET": SubResource("Animation_0s3hi")
}

[sub_resource type="Animation" id="Animation_wmuaa"]
resource_name = "ExclamationPoint4"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExclamationPoint:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ExclamationPoint2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ExclamationPoint3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_27eb0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExclamationPoint:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ExclamationPoint2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ExclamationPoint3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_27eb0"]
_data = {
&"ExclamationPoint4": SubResource("Animation_wmuaa"),
&"RESET": SubResource("Animation_27eb0")
}

[node name="WinningScreen" type="Node2D"]
script = ExtResource("1_rjmuv")

[node name="BackgroundWin" type="Sprite2D" parent="."]
position = Vector2(960, 450)
scale = Vector2(1.25, 1.25)
texture = ExtResource("2_wmuaa")

[node name="HappyFox" type="Node2D" parent="."]

[node name="HappyFox" type="Sprite2D" parent="HappyFox"]
position = Vector2(1614, 966)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_qcamx")

[node name="FoxJump" type="AnimationPlayer" parent="HappyFox"]
libraries = {
&"": SubResource("AnimationLibrary_xe6a3")
}

[node name="ToMainMenu" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 760.0
offset_top = 550.0
offset_right = 1160.0
offset_bottom = 650.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_x2pdc")
theme_override_font_sizes/font_size = 40
text = "Menu principal"

[node name="Victory" type="Label" parent="."]
offset_left = 610.0
offset_top = 250.0
offset_right = 1360.0
offset_bottom = 450.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("1_x2pdc")
theme_override_font_sizes/font_size = 150
text = "Victoire"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExclamationPoint" type="Label" parent="."]
visible = false
offset_left = 940.0
offset_top = 250.0
offset_right = 1690.0
offset_bottom = 450.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("1_x2pdc")
theme_override_font_sizes/font_size = 150
text = " !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExclamationPoint2" type="Label" parent="."]
visible = false
offset_left = 980.0
offset_top = 250.0
offset_right = 1730.0
offset_bottom = 450.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("1_x2pdc")
theme_override_font_sizes/font_size = 150
text = " !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExclamationPoint3" type="Label" parent="."]
visible = false
offset_left = 1020.0
offset_top = 250.0
offset_right = 1770.0
offset_bottom = 450.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("1_x2pdc")
theme_override_font_sizes/font_size = 150
text = " !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExclamationPoint4" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_27eb0")
}

[node name="Scene_transition_animation" parent="." instance=ExtResource("4_qcamx")]

[connection signal="pressed" from="ToMainMenu" to="." method="_on_to_main_menu_pressed"]
